# xcode

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  CLI_SPEC.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  package-lock.json  package.json  types.d.ts  wasm-node-wrapper.d.ts  wasm-node-wrapper.js  wasm-node-wrapper.mjs
.claude/skills/autocommit/: SKILL.md
.claude/skills/autorelease/: SKILL.md
.github/workflows/: ci.yml  publish.yml  release.yml
__test__/: index.spec.mjs  wasm.spec.mjs
benches/: benchmark-wasm-node.mjs  benchmark-wasm.mjs  benchmark.mjs  parse_build.rs
cli/: main.rs  output.rs  resolve.rs
cli/commands/: batch.rs  breakpoint.rs  build_setting.rs  dependency.rs  doctor.rs  extension.rs  file.rs  framework.rs  group.rs  mod.rs  object.rs  plist.rs  project.rs  scheme.rs  spm.rs  sync_group.rs  target.rs  workspace_cmd.rs  xcconfig_cmd.rs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
npm/xcode/: node-entry.mjs  package.json  wasm-entry.mjs
npm/xcode-node/: package.json
npm/xcode-wasm/: package.json  wrapper.d.ts  wrapper.mjs
scripts/: build-node-pkg.sh  build-wasm-pkg.sh  fix-wasm-pkg.sh
src/: breakpoints.rs  lib.rs  plist_xml.rs  scheme.rs  workspace.rs  xcconfig.rs
src/objects/: mod.rs
src/parser/: core.rs  escape.rs  lexer.rs  mod.rs  parser.rs
src/project/: build_settings.rs  mod.rs  paths.rs  uuid.rs  xcode_project.rs
src/types/: constants.rs  isa.rs  mod.rs  plist.rs
src/writer/: comments.rs  mod.rs  quotes.rs  serializer.rs
tests/: cli_tests.rs  integration_tests.rs  node.test.mjs  wasm.test.mjs
tests/cli/: batch_tests.rs  breakpoint_tests.rs  build_setting_tests.rs  doctor_tests.rs  file_tests.rs  group_tests.rs  help_tests.rs  mod.rs  object_tests.rs  path_tests.rs  plist_tests.rs  project_tests.rs  scheme_tests.rs  spm_tests.rs  stdin_tests.rs  sync_group_tests.rs  target_tests.rs  version_tests.rs  workspace_tests.rs  xcconfig_tests.rs
tests/fixtures/: test_info.plist
