[package]
name = "xcodekit"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Native Xcode project automation CLI for AI agents, CI, and developer tooling"
repository = "https://github.com/mozharovsky/xcodekit"

[lib]
name = "xcodekit"
path = "src/lib.rs"

[[bin]]
name = "xcodekit"
path = "cli/main.rs"

[dependencies]
indexmap = { version = "2", features = ["serde"] }
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng"] }
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
plist = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
quick-xml = { version = "0.37", features = ["serialize"] }

[dev-dependencies]
pretty_assertions = "1"

[[bench]]
name = "parse_build"
harness = false

[profile.release]
lto = true
opt-level = 3

[profile.bench]
inherits = "release"
opt-level = 3
